--- a/fram2steno.ipynb
+++ b/fram2steno.ipynb
@@ -6,29 +6,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Framingham_utils import *\n",
-    "from Steno_utils import *\n",
-    "from Inger_utils import *\n",
-    "from exploratory_data_analysys import * \n",
-    "from sklearn.impute import KNNImputer\n",
-    "\n",
-    "from sklearn.svm import SVC, SVR\n",
-    "from sklearn.neural_network import MLPClassifier, MLPRegressor \n",
-    "from sklearn.linear_model import SGDClassifier\n",
-    "\n",
-    "from sklearn.model_selection import StratifiedKFold, RepeatedStratifiedKFold\n",
-    "\n",
-    "from train_utils import *\n",
-    "\n",
-    "from model_evaluation import *\n",
-    "\n",
-    "from constants import * \n",
-    "\n",
+    "# Dependencies\n",
+    "# General purpose\n",
     "import copy \n",
+    "import pickle\n",
+    "import warnings \n",
     "\n",
+    "# Imputation and Data balancing \n",
+    "from sklearn.impute import KNNImputer\n",
     "from imblearn.over_sampling import ADASYN\n",
     "\n",
-    "import warnings \n",
+    "# Machine Learning development \n",
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "from sklearn.linear_model import SGDClassifier\n",
+    "\n",
+    "# In-house libraries\n",
+    "# Data preparation\n",
+    "from Framingham_utils import *\n",
+    "from Steno_utils import *\n",
+    "\n",
+    "# EDA\n",
+    "from exploratory_data_analysis import * \n",
+    "\n",
+    "# Macine Learning development\n",
+    "from train_utils import *\n",
+    "from model_evaluation import *\n",
+    "\n",
+    "# Performance profiling \n",
+    "from profiling import *\n",
+    "\n",
+    "# Directories, filenames, etc\n",
+    "from constants import * \n",
     "\n",
     "# Filter warnings \n",
     "warnings.filterwarnings(\"ignore\")\n",
@@ -37,8 +45,16 @@
     "STORE_PATH = r\".\\DSD2023_fram2steno_results\"\n",
     "\n",
     "# Save current working directory to come back later \n",
-    "wd = os.getcwd()\n",
-    "\n",
+    "wd = os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Data preparation \n",
     "fram_data, fram_X, fram_Y, fram_feat_names, fram_y_tag = prepare_Framingham(dataset_path = FRAM_PATH, filename = fram_filename)\n",
     "steno_data, steno_X, steno_Y, steno_feat_names, steno_y_tag = prepare_Steno(dataset_path = STENO_PATH, filename1 = steno_filename1, filename2 = steno_filename2)\n",
     "\n",
@@ -71,7 +87,7 @@
    "outputs": [],
    "source": [
     "# KNN-Imputation (training and validation set separately)\n",
-    "# Only for Framingham and Inger datasets \n",
+    "# Only for Framingham dataset\n",
     "# Imputer declaration \n",
     "imputer = KNNImputer(missing_values = np.nan , n_neighbors = 5, weights = 'uniform', metric = 'nan_euclidean',\n",
     "                      copy = 'false') \n",
@@ -124,14 +140,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Extract common features to train ML models with 3 data subsets with just the common features\n",
-    "fram_all_common_X_train = fram_X_train[['age', 'male','currentSmoker']]\n",
-    "fram_all_common_X_val = fram_X_val[['age', 'male','currentSmoker']]\n",
-    "\n",
-    "steno_all_common_X_train = steno_X_train[['age', 'sex','smoking']]\n",
-    "steno_all_common_X_val = steno_X_val[['age', 'sex','smoking']]\n",
-    "\n",
-    "# Make a substudy with Steno and Framingham databases since they are more similar\n",
+    "# Extract common features to train ML models with 2 data subsets with just the common features\n",
     "fram_2common_X_train = fram_X_train[['male','age','currentSmoker','prevalentStroke','sysBP']]\n",
     "fram_2common_X_val = fram_X_val[['male','age','currentSmoker','prevalentStroke','sysBP']]\n",
     "\n",
@@ -145,11 +154,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# To rename variables names and format to be the same, so dataset can be used to train the other model\n",
+    "# To rename variables names and format to be the same, so the second dataset can be used to train the same model\n",
     "fram_2common_X_train.rename(columns={'male':'sex', 'currentSmoker':'smoking','prevalentStroke':'prevcvd','sysBP':'sbp'}, inplace = True)\n",
     "fram_2common_X_val.rename(columns={'male':'sex', 'currentSmoker':'smoking','prevalentStroke':'prevcvd','sysBP':'sbp'}, inplace = True)\n",
-    "\n",
-    "# sex = 1 is male, sex = 0 is female, so no transformation is needed"
+    "# NOTE: sex = 1 is male, sex = 0 is female, so no transformation is needed"
    ]
   },
   {
@@ -158,11 +166,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Go to \"distributions\" directory, if not create one \n",
+    "# Go to \"EDA\" directory, if not create one \n",
     "if not os.path.exists('EDA'):\n",
     "    os.makedirs('EDA')\n",
     "\n",
-    "# Change directory to \"distributions\"\n",
+    "# Change directory to \"EDA\"\n",
     "os.chdir('EDA')"
    ]
   },
@@ -355,8 +363,8 @@
    "source": [
     "# Add columns to Steno target variable to perform the classification experiment.\n",
     "\n",
-    "# It is 1 if cvd_risk_10y >= 0.5 and 0 otherwise\n",
-    "steno_threshold_binary  = 0.2 # According to already established criteria https://steno.shinyapps.io/T1RiskEngine/\n",
+    "# It is 1 if cvd_risk_10y >= 0.2 and 0 otherwise (according to already established criteria https://steno.shinyapps.io/T1RiskEngine/)\n",
+    "steno_threshold_binary  = 0.2 \n",
     "\n",
     "# Training set \n",
     "# Creation of dummy deep copies, otherwise both columns of dataframe are modified \n",
@@ -451,43 +459,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SVM_model_steno.get_params()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "perc_model_steno.get_params()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "perc_best_params"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "SVM_best_params"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Models with the best parameters to be trained with both datasets \n",
     "svm_prev = SGDClassifier(loss='hinge', penalty = 'l2' , warm_start = False, random_state = 12345, **SVM_best_params) # Early Stopping set to false to partial_fit\n",
     "perceptron_prev = SGDClassifier(loss='perceptron', random_state = 12345, warm_start = False, early_stopping=False, \n",
@@ -500,7 +471,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Parameters are not stored properly. This is done manually\n",
+    "# Parameters are not stored properly. This is done manually (after the execution of the previous cell)\n",
     "svm_prev = SGDClassifier(loss='hinge', penalty = 'l2' , warm_start = False, random_state = 12345,\n",
     "                        alpha= 0.5,\n",
     "                        eta0= 0.001,\n",
@@ -519,7 +490,6 @@
    "outputs": [],
    "source": [
     "# Partial fit just iterate once through the training set, so 10 times with Cross Validation are performed\n",
-    "\n",
     "# Frammingham iterations \n",
     "fram_iterations = 10\n",
     "\n",
@@ -528,9 +498,6 @@
     "\n",
     "# Declare a StratifiedKFold object with 10 folds\n",
     "skf = StratifiedKFold(n_splits = fram_iterations, shuffle = True, random_state = 12345)\n",
-    "\n",
-    "# Declare a RepeatedStratifiedKFold object with 10 folds\n",
-    "rskf = RepeatedStratifiedKFold(n_splits = fram_iterations, n_repeats = fram_repetitions, random_state = 12345)\n",
     "\n",
     "# For simplicity of code\n",
     "X = fram_2common_X_train.to_numpy()\n",
@@ -547,7 +514,6 @@
     "i = 0\n",
     "\n",
     "for train_index, test_index in skf.split(X, y):\n",
-    "#for train_index, test_index in rskf.split(X, y):\n",
     "    \n",
     "    i = i + 1\n",
     "\n",
@@ -653,7 +619,7 @@
    "outputs": [],
    "source": [
     "# Set a lower regularization parameter to allow SVM learn faster with the second dataset\n",
-    "svm_pretrained.alpha = 0.005 # Low C, means need of more support vectors (here we have more data)\n"
+    "svm_pretrained.alpha = 0.005 # Low C, means need of more support vectors (here we have more data)"
    ]
   },
   {
@@ -668,18 +634,16 @@
     "steno_folds = 10\n",
     "\n",
     "# Steno repetitions \n",
-    "steno_repetitions = 1 #100\n",
+    "steno_repetitions = 1 \n",
     "\n",
     "# Declare a StratifiedKFold object with 10 folds\n",
     "skf = StratifiedKFold(n_splits = steno_folds, shuffle = True, random_state = 12345)\n",
-    "\n",
-    "# Declare a RepeatedStratifiedKFold object with 10 folds\n",
-    "rskf = RepeatedStratifiedKFold(n_splits = steno_folds, n_repeats = steno_repetitions, random_state = 12345)\n",
     "\n",
     "# For simplicity of code\n",
     "X = steno_2common_X_train.to_numpy()\n",
     "y = np.ravel(steno_y_train['Class_label_binary'])\n",
     "\n",
+    "# Dummy counter\n",
     "i = 0\n",
     "\n",
     "# Empty list to store the results of the 10 iterations\n",
@@ -691,7 +655,6 @@
     "curr_svm_model = svm_pretrained\n",
     "\n",
     "for train_index, test_index in skf.split(X, y):\n",
-    "#for train_index, test_index in rskf.split(X, y):\n",
     "    \n",
     "    i = i + 1\n",
     "\n",
@@ -747,41 +710,7 @@
     "plt.ylabel(\"AUC\")\n",
     "\n",
     "# Save figure \n",
-    "plt.savefig(\"Steno Classification (5 common) - AUC vs. Iteration.png\", dpi = 300)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Plot auc vs iteration\n",
-    "# plt.figure()\n",
-    "# plt.plot(range(fram_iterations*fram_repetitions), fram_perc_train_results)\n",
-    "\n",
-    "# # Set title and labels\n",
-    "# plt.title(\"Perceptron: Steno Classification (5 common) - AUC vs. Iteration\")\n",
-    "# plt.xlabel(\"Iteration\")\n",
-    "# plt.ylabel(\"AUC\")\n",
-    "# plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# # Plot auc vs iteration for SVM\n",
-    "# plt.plot(range(fram_iterations*fram_repetitions), fram_svm_train_results)\n",
-    "\n",
-    "# # Set title and labels\n",
-    "# plt.title(\"SVM: Steno Classification (5 common) - AUC vs. Iteration\")\n",
-    "# plt.xlabel(\"Iteration\")\n",
-    "# plt.ylabel(\"AUC\")\n",
-    "# plt.show()"
+    "plt.savefig(\"Steno Classification (5 common) - AUC vs. Iteration.png\", dpi = 300)"
    ]
   },
   {
@@ -809,7 +738,7 @@
     "\n",
     "# Save results in an Excel file\n",
     "results = pd.DataFrame({'ACC': [steno_acc_perc_post, fram_acc_perc_post], 'AUC': [steno_auc_perc_post, fram_auc_perc_post], 'F1': [f1_steno_perc_post, f1_fram_perc_post], 'Recall': [recall_steno_perc_post, recall_fram_perc_post], 'Precision': [prec_steno_perc_post, prec_fram_perc_post]}, index=['Steno Only 5 common', 'Frammingham Only 5 common'])\n",
-    "results.to_excel('Perceptron_post_training_Steno_Frammingham_5common.xlsx')\n"
+    "results.to_excel('Perceptron_post_training_Steno_Frammingham_5common.xlsx')"
    ]
   },
   {
@@ -893,33 +822,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from profiling import *\n",
-    "\n",
     "# Concatenated steno and framingham validation set \n",
-    "X_val = pd.concat([steno_2common_X_val, fram_2common_X_val])\n",
-    "\n",
-    "\n"
+    "X_val = pd.concat([steno_2common_X_val, fram_2common_X_val])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5.00112771987915e-05\n",
-      "0.0002179941404232695\n",
-      "7.501542568206787e-05\n",
-      "0.0002634455370399735\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Execution time \n",
-    "\n",
     "n_instances = X_test.shape[0]\n",
     "SVM_runtimes = np.zeros(n_instances, dtype=float)\n",
     "for i in range(n_instances):\n",
@@ -943,37 +856,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Export SVM using pickle\n",
-    "import pickle\n",
+    "# Export SVM and Perceptron using pickle\n",
     "pickle.dump(svm_posttrained, open('svm_posttrained.sav', 'wb'))\n",
-    "\n",
-    "# Export Perceptron using pickle\n",
     "pickle.dump(perc_posttrained, open('perc_posttrained.sav', 'wb'))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'c:\\\\Users\\\\aralmeida\\\\OneDrive - Universidad de Las Palmas de Gran Canaria\\\\Doctorado\\\\codigo\\\\diabetes_risk_calculators\\\\DSD2023_fram2steno_results'"
-      ]
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Get current directory \n",
-    "os.getcwd()"
    ]
   }
  ],
