--- a/fram2steno.ipynb
+++ b/fram2steno.ipynb
@@ -42,7 +42,7 @@
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "# Path to store obtained reusults\n",
-    "STORE_PATH = r\".\\DSD2023_fram2steno_results\"\n",
+    "STORE_PATH = r\".\\fram2steno_results\"\n",
     "\n",
     "# Save current working directory to come back later \n",
     "wd = os.getcwd()"
