--- a/fram2steno.ipynb
+++ b/fram2steno.ipynb
@@ -16,6 +16,9 @@
     "from sklearn.impute import KNNImputer\n",
     "from imblearn.over_sampling import ADASYN\n",
     "\n",
+    "# Statistical analysis\n",
+    "from scipy import stats\n",
+    "\n",
     "# Machine Learning development \n",
     "from sklearn.model_selection import StratifiedKFold\n",
     "from sklearn.linear_model import SGDClassifier\n",
@@ -28,7 +31,7 @@
     "# EDA\n",
     "from exploratory_data_analysis import * \n",
     "\n",
-    "# Macine Learning development\n",
+    "# Machine Learning development\n",
     "from train_utils import *\n",
     "from model_evaluation import *\n",
     "\n",
@@ -222,6 +225,45 @@
     "\n",
     "    # Save figure with high resolution \n",
     "    fig.savefig(feat + '_compared.png', dpi=300, bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Perform test Shapiro-Wilk to check normality of the distributions\n",
+    "shapiro_test_fram_age = stats.shapiro(fram_2common_X_train['age'])\n",
+    "shapiro_test_fram_bp = stats.shapiro(fram_2common_X_train['sysBP'])\n",
+    "\n",
+    "# Print statistics and p-value\n",
+    "print('Shapiro-Wilk test for Frammingham age: ', shapiro_test_fram_age)\n",
+    "print('Shapiro-Wilk test for Frammingham blood pressure: ', shapiro_test_fram_bp)\n",
+    "\n",
+    "shapiro_test_steno_age = stats.shapiro(steno_2common_X_train['age'])\n",
+    "shapiro_test_steno_bp = stats.shapiro(steno_2common_X_train['sbp'])\n",
+    "\n",
+    "# Print statistics and p-value\n",
+    "print('Shapiro-Wilk test for Steno age: ', shapiro_test_steno_age)\n",
+    "print('Shapiro-Wilk test for Steno blood pressure: ', shapiro_test_steno_bp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Counts 0 and 1 in binary variables\n",
+    "print('Frammingham gender counts (%): ', fram_2common_X_train['male'].value_counts()*100/len(fram_2common_X_train))\n",
+    "print('Frammingham smoker counts (%): ', fram_2common_X_train['currentSmoker'].value_counts()*100/len(fram_2common_X_train))\n",
+    "print('Frammingham prevalentStroke counts (%): ', fram_2common_X_train['prevalentStroke'].value_counts()*100/len(fram_2common_X_train))\n",
+    "\n",
+    "\n",
+    "print('Steno gender counts (%): ', steno_2common_X_train['sex'].value_counts()*100/len(steno_2common_X_train))\n",
+    "print('Steno smoker counts (%): ', steno_2common_X_train['smoking'].value_counts()*100/len(steno_2common_X_train))\n",
+    "print('Steno prevalentStroke counts (%): ', steno_2common_X_train['prevcvd'].value_counts()*100/len(steno_2common_X_train))"
    ]
   },
   {
