--- a/steno2fram.ipynb
+++ b/steno2fram.ipynb
@@ -2,46 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'exploratory_data_analysys'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\aralmeida\\OneDrive - Universidad de Las Palmas de Gran Canaria\\Doctorado\\codigo\\Transfer_Learning_for_CVD_risk_calculators\\steno2fram.ipynb Cell 1\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/aralmeida/OneDrive%20-%20Universidad%20de%20Las%20Palmas%20de%20Gran%20Canaria/Doctorado/codigo/Transfer_Learning_for_CVD_risk_calculators/steno2fram.ipynb#W0sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mFramingham_utils\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/aralmeida/OneDrive%20-%20Universidad%20de%20Las%20Palmas%20de%20Gran%20Canaria/Doctorado/codigo/Transfer_Learning_for_CVD_risk_calculators/steno2fram.ipynb#W0sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mSteno_utils\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/aralmeida/OneDrive%20-%20Universidad%20de%20Las%20Palmas%20de%20Gran%20Canaria/Doctorado/codigo/Transfer_Learning_for_CVD_risk_calculators/steno2fram.ipynb#W0sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mexploratory_data_analysys\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m \n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/aralmeida/OneDrive%20-%20Universidad%20de%20Las%20Palmas%20de%20Gran%20Canaria/Doctorado/codigo/Transfer_Learning_for_CVD_risk_calculators/steno2fram.ipynb#W0sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mimpute\u001b[39;00m \u001b[39mimport\u001b[39;00m KNNImputer\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/aralmeida/OneDrive%20-%20Universidad%20de%20Las%20Palmas%20de%20Gran%20Canaria/Doctorado/codigo/Transfer_Learning_for_CVD_risk_calculators/steno2fram.ipynb#W0sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39msvm\u001b[39;00m \u001b[39mimport\u001b[39;00m SVC, SVR\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'exploratory_data_analysys'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from Framingham_utils import *\n",
-    "from Steno_utils import *\n",
-    "from exploratory_data_analysys import * \n",
-    "from sklearn.impute import KNNImputer\n",
-    "\n",
-    "from sklearn.svm import SVC, SVR\n",
-    "from sklearn.neural_network import MLPClassifier, MLPRegressor \n",
-    "from sklearn.linear_model import SGDClassifier\n",
-    "\n",
-    "from sklearn.model_selection import StratifiedKFold, RepeatedStratifiedKFold\n",
-    "\n",
+    "# Dependencies\n",
+    "# General purpose\n",
     "import time\n",
-    "\n",
-    "from train_utils import *\n",
-    "\n",
-    "from model_evaluation import *\n",
-    "\n",
-    "from constants import * \n",
-    "\n",
+    "import pickle\n",
     "import copy \n",
+    "import warnings \n",
     "\n",
+    "# Imputation and Data balancing \n",
+    "from sklearn.impute import KNNImputer\n",
     "from imblearn.over_sampling import ADASYN\n",
     "\n",
-    "import warnings \n",
+    "# Statistical analysis\n",
+    "from scipy import stats\n",
+    "\n",
+    "# Machine Learning development \n",
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "from sklearn.linear_model import SGDClassifier\n",
+    "\n",
+    "# In-house libraries\n",
+    "# Data preparation\n",
+    "from Framingham_utils import *\n",
+    "from Steno_utils import *\n",
+    "\n",
+    "# EDA\n",
+    "from exploratory_data_analysis import * \n",
+    "\n",
+    "# Machine Learning development\n",
+    "from train_utils import *\n",
+    "from model_evaluation import *\n",
+    "\n",
+    "# Directories, filenames, etc\n",
+    "from constants import * \n",
     "\n",
     "# Filter warnings \n",
     "warnings.filterwarnings(\"ignore\")\n",
@@ -84,7 +80,7 @@
    "outputs": [],
    "source": [
     "# KNN-Imputation (training and validation set separately)\n",
-    "# Only for Framingham and Inger datasets \n",
+    "# Only for Framingham\n",
     "# Imputer declaration \n",
     "imputer = KNNImputer(missing_values = np.nan , n_neighbors = 5, weights = 'uniform', metric = 'nan_euclidean',\n",
     "                      copy = 'false') \n",
@@ -228,6 +224,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Perform test Shapiro-Wilk to check normality of the distributions\n",
+    "shapiro_test_fram_age = stats.shapiro(fram_2common_X_train['age'])\n",
+    "shapiro_test_fram_bp = stats.shapiro(fram_2common_X_train['sysBP'])\n",
+    "\n",
+    "# Print statistics and p-value\n",
+    "print('Shapiro-Wilk test for Frammingham age: ', shapiro_test_fram_age)\n",
+    "print('Shapiro-Wilk test for Frammingham blood pressure: ', shapiro_test_fram_bp)\n",
+    "\n",
+    "shapiro_test_steno_age = stats.shapiro(steno_2common_X_train['age'])\n",
+    "shapiro_test_steno_bp = stats.shapiro(steno_2common_X_train['sbp'])\n",
+    "\n",
+    "# Print statistics and p-value\n",
+    "print('Shapiro-Wilk test for Steno age: ', shapiro_test_steno_age)\n",
+    "print('Shapiro-Wilk test for Steno blood pressure: ', shapiro_test_steno_bp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Counts 0 and 1 in binary variables\n",
+    "print('Frammingham gender counts (%): ', fram_2common_X_train['male'].value_counts()*100/len(fram_2common_X_train))\n",
+    "print('Frammingham smoker counts (%): ', fram_2common_X_train['currentSmoker'].value_counts()*100/len(fram_2common_X_train))\n",
+    "print('Frammingham prevalentStroke counts (%): ', fram_2common_X_train['prevalentStroke'].value_counts()*100/len(fram_2common_X_train))\n",
+    "\n",
+    "\n",
+    "print('Steno gender counts (%): ', steno_2common_X_train['sex'].value_counts()*100/len(steno_2common_X_train))\n",
+    "print('Steno smoker counts (%): ', steno_2common_X_train['smoking'].value_counts()*100/len(steno_2common_X_train))\n",
+    "print('Steno prevalentStroke counts (%): ', steno_2common_X_train['prevcvd'].value_counts()*100/len(steno_2common_X_train))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "os.chdir('..')"
    ]
   },
@@ -303,17 +338,11 @@
     "        # Set IEEE style\n",
     "        plt.style.use(['science','ieee'])\n",
     "        \n",
-    "        # Set figure title\n",
-    "        # fig.suptitle(feat)\n",
-    "\n",
     "        ax.hist(steno_2common_X_train[feat], alpha=0.5, histtype = 'stepfilled', color = 'blue', ec='black', linestyle='solid')\n",
-    "        #ax[0].set_title('Steno')\n",
     "        ax.hist(fram_2common_X_train[feat],  alpha=0.5, histtype = 'stepfilled', color = 'black', ec='black', linestyle='solid')\n",
-    "        #ax[1].set_title('Framingham')\n",
     "\n",
     "        # Set axis label size\n",
     "        ax.tick_params(axis='both', which='major', labelsize=6)\n",
-    "\n",
     "\n",
     "        # Set the legend only in the first figure\n",
     "        if feat == 'sbp':\n",
@@ -341,7 +370,6 @@
     "\n",
     "        # Set IEEE style\n",
     "        plt.style.use(['science','ieee'])\n",
-    "\n",
     "        \n",
     "        ax.hist(steno_2common_X_train[feat], alpha=0.5, histtype = 'stepfilled', color = 'blue', ec = 'blue')#, color = 'b', ec='black')\n",
     "        ax.hist(fram_2common_X_train[feat],  alpha=0.5, histtype = 'stepfilled', color = 'black')#, color = 'k', ec='black')\n",
@@ -378,9 +406,7 @@
     "    fig.suptitle(feat)\n",
     "\n",
     "    ax.hist(steno_2common_X_val[feat], alpha=0.5, color = 'b', label=\"\", fill=True)\n",
-    "    #ax[0].set_title('Steno')\n",
     "    ax.hist(fram_2common_X_val[feat],  alpha=0.5, color = 'k', label=\"\", fill=True)\n",
-    "    #ax[1].set_title('Framingham')\n",
     "\n",
     "    # Set the legend only in the first figure\n",
     "    if feat == 'sex':\n",
@@ -513,7 +539,7 @@
     "                        eta0 = 0.001,\n",
     "                        learning_rate =  'constant',\n",
     "                        power_t =  0.5,\n",
-    "                        tol =  0.0001)\n"
+    "                        tol =  0.0001)"
    ]
   },
   {
@@ -527,14 +553,8 @@
     "# Steno iterations \n",
     "steno_folds = 10\n",
     "\n",
-    "# Steno repetitions \n",
-    "steno_repetitions = 1 #100\n",
-    "\n",
     "# Declare a StratifiedKFold object with 10 folds\n",
     "skf = StratifiedKFold(n_splits = steno_folds, shuffle = True, random_state = 12345)\n",
-    "\n",
-    "# Declare a RepeatedStratifiedKFold object with 10 folds\n",
-    "rskf = RepeatedStratifiedKFold(n_splits = steno_folds, n_repeats = steno_repetitions, random_state = 12345)\n",
     "\n",
     "# For simplicity of code\n",
     "X = steno_2common_X_train.to_numpy()\n",
@@ -551,7 +571,6 @@
     "curr_svm_model = svm_prev\n",
     "\n",
     "for train_index, test_index in skf.split(X, y):\n",
-    "#for train_index, test_index in rskf.split(X, y):\n",
     "    \n",
     "    i = i + 1\n",
     "\n",
@@ -685,7 +704,7 @@
    "outputs": [],
    "source": [
     "# Set a lower regularization parameter to allow SVM learn faster with the second dataset\n",
-    "svm_pretrained.alpha = 0.005 # Low C, means need of more support vectors (here we have more data)"
+    "svm_pretrained.alpha = 0.005 # Decrease C, means need of more support vectors (here we have more data)"
    ]
   },
   {
@@ -705,9 +724,6 @@
     "# Declare a StratifiedKFold object with 10 folds\n",
     "skf = StratifiedKFold(n_splits = fram_iterations, shuffle = True, random_state = 12345)\n",
     "\n",
-    "# Declare a RepeatedStratifiedKFold object with 10 folds\n",
-    "rskf = RepeatedStratifiedKFold(n_splits = fram_iterations, n_repeats = fram_repetitions, random_state = 12345)\n",
-    "\n",
     "# For simplicity of code\n",
     "X = fram_2common_X_train.to_numpy()\n",
     "y = np.ravel(fram_y_train['TenYearCHD'])\n",
@@ -723,7 +739,6 @@
     "i = 0\n",
     "\n",
     "for train_index, test_index in skf.split(X, y):\n",
-    "#for train_index, test_index in rskf.split(X, y):\n",
     "    \n",
     "    i = i + 1\n",
     "\n",
@@ -751,7 +766,7 @@
     "    fram_svm_train_results.append(y_svm_pred)\n",
     "    \n",
     "    # Update current model \n",
-    "    curr_perc_model = perc_posttrained\n"
+    "    curr_perc_model = perc_posttrained"
    ]
   },
   {
@@ -768,7 +783,7 @@
     "plt.title(\"Perceptron: Steno Classification (5 common) - AUC vs. Iteration\")\n",
     "plt.xlabel(\"Iteration\")\n",
     "plt.ylabel(\"AUC\")\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -812,7 +827,7 @@
     "\n",
     "# Save results in an Excel file\n",
     "results = pd.DataFrame({'ACC': [steno_acc_perc_post, fram_acc_perc_post], 'AUC': [steno_auc_perc_post, fram_auc_perc_post], 'F1': [f1_steno_perc_post, f1_fram_perc_post], 'Recall': [recall_steno_perc_post, recall_fram_perc_post], 'Precision': [prec_steno_perc_post, prec_fram_perc_post]}, index=['Steno Only 5 common', 'Frammingham Only 5 common'])\n",
-    "results.to_excel('Perceptron_post_training_Steno_Frammingham_5common.xlsx')\n"
+    "results.to_excel('Perceptron_post_training_Steno_Frammingham_5common.xlsx')"
    ]
   },
   {
@@ -886,8 +901,7 @@
     "                        'Recall - Post': [recall_steno_perc_post, recall_fram_perc_post],\n",
     "                        'Precision - Prev': [prec_steno_perc_prev, prec_fram_perc_prev],\n",
     "                        'Precision - Post': [prec_steno_perc_post, prec_fram_perc_post]}, index=['Steno Only 5 common - Perceptron', 'Frammingham Only 5 common - Perceptron'])\n",
-    "results.to_excel('Perceptron_Steno_Frammingham_5common.xlsx')\n",
-    "                        "
+    "results.to_excel('Perceptron_Steno_Frammingham_5common.xlsx')                      "
    ]
   },
   {
@@ -896,7 +910,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    " n_instances = X_test.shape[0]\n",
+    "n_instances = X_test.shape[0]\n",
     "SVM_runtimes = np.zeros(n_instances, dtype=float)\n",
     "for i in range(n_instances):\n",
     "    instance = X_test[[i], :]\n",
@@ -924,28 +938,11 @@
    "outputs": [],
    "source": [
     "# Export SVM using pickle\n",
-    "import pickle\n",
     "pickle.dump(svm_posttrained, open('svm_posttrained.sav', 'wb'))\n",
     "\n",
     "# Export Perceptron using pickle\n",
     "pickle.dump(perc_posttrained, open('perc_posttrained.sav', 'wb'))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "perc_posttrained.get_params()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
